styles added and lorem text
Added the styles for navigation bar. Next step will be to create the pages and also change display properties

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home❤️</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     
@@ -24,7 +25,7 @@
           <main>
                 <!-- h2 to start adding some general content -->
                  <h2>Here is some information.</h2>
-                 <p>I want to learn how to make nice and response navigation bars, so this is a refersher.</p>
+                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit provident, asperiores, dolores ex voluptatum ipsam exercitationem commodi quam, quisquam esse officia non aspernatur nulla reiciendis doloremque quidem blanditiis delectus aliquam.</p>
 
           </main>
 
